<RelativeLayout 
android:id="@+id/rlAccountMain" 
android:layout_width="fill_parent" 
android:layout_height="fill_parent" 
xmlns:android="http://schemas.android.com/apk/res/android" 
android:background="@color/Black_Gray">

<RelativeLayout 
android:id="@+id/rlAccountBG" 
android:layout_height="fill_parent" 
android:layout_width="fill_parent" 
android:layout_marginLeft="30dp" 
android:layout_marginBottom="30dp" 
android:layout_marginRight="30dp" 
android:layout_marginTop="30dp" android:background="@drawable/login_bg_v">

<TextView 
android:layout_width="wrap_content" 
android:layout_height="wrap_content" 
android:id="@+id/tvAccountTitle" 
android:text="@string/create_account" 
android:textColor="@color/White" 
android:textColorHighlight="@color/White" 
android:textSize="22sp" 
android:textStyle="bold" 
android:paddingLeft="30dp" 
android:paddingTop="30dp"/>

<ImageView 
android:layout_below="@+id/tvAccountTitle" 
android:id="@+id/ivLine01" 
android:layout_width="fill_parent" 
android:src="@drawable/h_line800" 
android:layout_marginTop="10dp" 
android:layout_marginLeft="25dp" 
android:layout_marginRight="25dp" android:layout_height="3dp" android:scaleType="fitXY"/>

<TextView android:layout_width="wrap_content" 
android:id="@+id/tvVisit" 
android:text="@string/pandora_account_visit" 
android:textSize="16sp" 
android:gravity="center" 
android:textColor="@color/White" 
android:textColorHighlight="@color/White" 
android:layout_below="@+id/ivLine01" 
android:paddingLeft="30dp" 
android:paddingTop="30dp" 
android:layout_height="wrap_content"/>

<TextView android:gravity="center_vertical|center_horizontal" 
android:text="@string/pandora_visit_btn" 
android:id="@+id/tvBtnVisit" 
android:textColor="@color/White" 
android:textColorHighlight="@color/White" 
android:textSize="20sp" 
android:layout_width="wrap_content" 
android:paddingLeft="10dp" 
android:paddingRight="10dp" 
android:background="@color/Black" 
android:layout_below="@+id/tvVisit" 
android:layout_centerHorizontal="true" android:layout_marginTop="10dp" android:maxWidth="360sp" android:layout_height="wrap_content" android:paddingBottom="5dp" android:paddingTop="5dp"/>

<TextView android:layout_height="wrap_content" 
android:id="@+id/tvCAInfo" 
android:text="@string/pandora_create_account_content" 
android:gravity="center_vertical|center_horizontal" 
android:textSize="16sp" android:layout_centerHorizontal="true" android:paddingTop="20dp" android:maxWidth="300sp" android:layout_width="300sp" android:layout_centerVertical="true"/>

<TextView 
android:layout_width="wrap_content" 
android:layout_height="wrap_content" 
android:id="@+id/tvAccountActionCode" 
android:textColor="@color/White" 
android:textColorHighlight="@color/White" 
android:textSize="20sp" 
android:text="@string/app_name" android:layout_below="@+id/tvCAInfo" android:layout_centerHorizontal="true" android:paddingTop="30dp"/>

<ImageView 
android:src="@drawable/h_line800" 
android:layout_width="fill_parent" 
android:id="@+id/ivLine02" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_alignParentBottom="true" android:layout_marginBottom="80dp" android:layout_height="3dp" android:scaleType="fitXY"/>

<TextView android:layout_height="wrap_content" 
android:layout_width="wrap_content" 
android:gravity="center_vertical|center_horizontal" 
android:background="@drawable/ok_btn" 
android:id="@+id/tvCABtnOK" 
android:textColor="@color/White" 
android:textColorHighlight="@color/White" 
android:textSize="18sp" 
android:textStyle="bold" 
android:text="@string/ok" android:layout_marginTop="20dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:layout_marginBottom="30dp"/>

</RelativeLayout>
</RelativeLayout>
